allow updating of display_name with PATCH
